# Sandbox

./: .gitignore  CMakeLists.txt  README.md  project.vim
data/DATA_DIR_test/: data.txt
src/AStar/: main.cpp
src/AStarEasy/: main.cpp
src/Algorithms/: main.cpp
src/Array_Time/: main.cpp
src/BinaryCalc/: BinaryCalc.cpp  StringFunctions.h
src/ClassMemberInit/: main.cpp
src/CurDir/: main.cpp
src/DATA_DIR_test/: main.cpp
src/Date/: main.cpp
src/DoublyLinkedList/: main.cpp
src/Files/: main.cpp
src/FunctionDef/: ezmukszik.cpp  ezmukszik.h  main.cpp
src/HigherFunctions/: HigherFunctions.cpp
src/KeyLogger/: main.cpp
src/LogMacro/: file.txt
src/PerfectForwarding/: PerfectForwarding.cpp
src/Primes/: main.cpp
src/Random/: Random.cpp
src/ScreenShot/: ScreenShot.cpp
src/ScreenShotDimensions/: ScreenShotDimensions.cpp
src/ScreenShotMouse/: main.cpp
src/SeeWhitespace/: SeeWhitespace.cpp  text.txt
src/System/: System.cpp
src/Timer/: Timer.h  main.cpp
src/TypeChecking/: main.cpp
src/UniquePtr/: UniquePtr.cpp
src/Unsigned_Interp/: main.cpp
src/Vectors/: main.cpp
src/ass4check/: main.cpp
src/variadic/: main.cpp
